# retry-rs

./: Cargo.toml  Makefile
circuit_breaker/: Cargo.toml
circuit_breaker/proptest-regressions/: lib.txt
circuit_breaker/src/: clock.rs  lib.rs
circuit_breaker/src/strategy/: sequential.rs
resilience/: Cargo.toml
resilience/src/: lib.rs
retry/: Cargo.toml
retry/src/: exponential_backoff.rs  full_jitter_exponential_backoff.rs  incremental_backoff.rs  lib.rs  regular_interval_backoff.rs
src/: exponential_backoff.rs  full_jitter_exponential_backoff.rs  incremental_backoff.rs  jitter_exponential_backoff.rs  lib.rs  main.rs  regular_interval_backoff.rs  retry.rs  sequential_backoff.rs
