[package]
name = "circuit_breaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
retry = { path = "../retry" }
tracing = "0.1.19"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
proptest = "1.0.0"
mockall = "0.11.1"
async-trait = "0.1.52"